src/styles.scss
$lightBlue: #679aac;
$cream: #f8f7e5;
$black: #1d1d1d;
$darkOrange: #ff834f;
$yellow: #f9af42;
$grey: #858585;
$red: #ec7b7bcc;
$borderRadius: 4px;

@mixin fullDisplay() {
  height: 100dvh;
  width: 100vw;
}

@mixin dFlex($jc: center, $ai: center, $g: 0) {
  display: flex;
  justify-content: $jc;
  align-items: $ai;
  gap: $g;
}

@mixin respond-to($device) {
  @if $device == mobile-portrait {
    @media (max-width: 480px) {
      @content;
    }
  } @else if $device == mobile-landscape {
    @media (max-width: 900px) and (max-height: 480px) {
      @content;
    }
  } @else if $device == tablet-portrait {
    @media (max-width: 768px) and (orientation: portrait) {
      @content;
    }
  } @else if $device == tablet {
    @media (max-width: 768px) {
      @content;
    }
  } @else if $device == tablet-landscape {
    @media (max-width: 1024px) {
      @content;
    }
  } @else if $device == small-desktop {
    @media (max-width: 1300px) {
      @content;
    }
  } @else if $device == large-desktop {
    @media (min-width: 1700px) {
      @content;
    }
  } @else if $device == short-height {
    @media (max-height: 800px) {
      @content;
    }
  } @else if $device == very-short-height {
    @media (max-height: 740px) {
      @content;
    }
  } @else if $device == ultra-wide {
    @media (min-aspect-ratio: 55/24) {
      @content;
    }
  } @else {
    @warn "Unknown device `#{$device}` in respond-to mixin.";
  }
}

::-webkit-scrollbar {
  display: none; /* Für Chrome, Edge, Safari */
}

* {
  font-family: "Quicksand";
}

html {
  scrollbar-width: none; /* Für Firefox */
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  overflow: hidden;
  background-color: #1d1d1d;
  @include respond-to(tablet-landscape) {
    overflow: visible;
    overflow-y: auto;
  }
}

.overflowVisible {
  overflow: visible;
  overflow-x: hidden;
}

h1 {
  font-family: "Eczar";
  font-size: 96px;
  margin: 0;
  line-height: 110%;
  @media (max-width: 1150px) {
    font-size: 88px;
  }
  @media (max-width: 1024px) and (min-height: 700px) {
    font-size: 80px;
  }
  @include respond-to(tablet) {
    font-size: 72px;
  }
  @media (max-width: 400px) {
    font-size: 56px;
    @media (max-height: 650px) {
      font-size: 48px;
    }
  }
  @media (max-width: 680px) and (max-height: 410px) {
    font-size: 48px;
  }
}

h2 {
  font-family: "Eczar";
  font-size: 72px;
  margin: 0;
  line-height: 100%;
  @media (max-width: 1450px) {
    font-size: 59px;
  }
  @media (max-width: 1220px) {
    font-size: 50px;
  }
  @include respond-to(tablet-landscape) {
    margin-bottom: 32px;
  }
  @include respond-to(tablet) {
    font-size: 40px;
  }
  @include respond-to(mobile-portrait) {
    font-size: 32px;
  }
}

h3 {
  font-size: 48px;
  font-weight: 400;
  margin: 0;
  line-height: 100%;
  @media (max-width: 1150px) {
    font-size: 40px;
  }
  @include respond-to(tablet-landscape) {
    font-size: 32px;
  }
  @media (max-width: 400px) {
    font-size: 24px;
    @media (max-height: 650px) {
      font-size: 20px;
    }
  }
  @media (max-width: 680px) and (max-height: 410px) {
    font-size: 22px;
  }
}

h4 {
  font-size: 24px;
  font-weight: 700;
  margin: 0;
  line-height: 100%;
}

span {
  line-height: 120%;
}

button {
  font-family: "Quicksand";
  font-size: 18px;
  font-weight: 700;
  line-height: 75%;
  height: 40px;
  border-radius: 20px;
  padding: 12px 24px;
  border: 1px solid $cream;
  color: $cream;
  background: inherit;
  transition: background-color 100ms ease-in;
  &:hover,
  &.hoverEffect {
    cursor: pointer;
    background-color: $darkOrange;
  }
}

a {
  -webkit-tap-highlight-color: transparent;
  tap-highlight-color: transparent;
  @media (hover: none) and (pointer: coarse) {
    cursor: default;
  }
}

app-nav-bullets {
  position: absolute;
  right: 5vw;
  top: calc((100dvh - 148px) / 2);
  z-index: 100;
}

.dNone {
  display: none;
}

.black {
  color: $black;
}

.cream {
  color: $cream;
}

.hexagonOrange {
  polygon {
    stroke: $darkOrange;
    fill: $darkOrange;
  }
}

.hexagonYellow {
  polygon {
    stroke: $yellow;
    fill: $yellow;
  }
}

.hexagonBlue {
  polygon {
    stroke: $lightBlue;
    fill: $lightBlue;
  }
}

.maxWidth {
  height: 100dvh;
  max-width: 1920px;
  position: relative;
  @include dFlex($ai: normal);
  flex-direction: column;
}

.header {
  height: 10dvh;
  min-height: 72px;
  max-height: 88px;
  margin: 0 5% 0 5%;
  @include dFlex($jc: space-between);
  @include respond-to(tablet) {
    height: 72px;
  }
  app-logo-name {
    height: 100%;
  }
  app-mini-menu {
    height: 45%;
  }
}

.contentMainComponent {
  padding: 8dvh 5vw 0 7.78vw;
  @include dFlex();
  flex-grow: 1;
  @include respond-to(short-height) {
    padding-top: 4dvh;
  }
}

.overlay {
  border: 1px solid;
  border-radius: $borderRadius;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  transition: transform 200ms ease-in, opacity 200ms ease-in,
    visibility 200ms ease-in;
  z-index: 200;
  &.open {
    opacity: 1;
    visibility: visible;
  }
}

.jumpingImg {
  @include dFlex($ai: flex-end);
  width: 40px;
  aspect-ratio: 1;
  > * {
    animation: moveUpDown 450ms ease-in-out infinite alternate;
  }
  img {
    height: fit-content;
  }
  &:hover > * {
    animation-play-state: paused;
  }
}

.marginLateral {
  margin-left: 7.78vw;
  margin-right: 5vw;
  @include respond-to(tablet-landscape) {
    margin-left: 5vw;
  }
}

@keyframes moveUpDown {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-10px);
  }
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes rotateCounterclockwise {
  from {
    transform: rotate(360deg);
  }
  to {
    transform: rotate(0deg);
  }
}

/* quicksand-regular - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: "Quicksand";
  font-style: normal;
  font-weight: 400;
  src: url("./assets/fonts/quicksand-v31-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* quicksand-700 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: "Quicksand";
  font-style: normal;
  font-weight: 700;
  src: url("./assets/fonts/quicksand-v31-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* eczar-regular - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: "Eczar";
  font-style: normal;
  font-weight: 400;
  src: url("./assets/fonts/eczar-v22-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* eczar-700 - latin */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: "Eczar";
  font-style: normal;
  font-weight: 700;
  src: url("./assets/fonts/eczar-v22-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

